@@ -1,6 +1,7 @@
 CHANGELOG RoundCube Webmail
 ===========================
 
+- Speed up message list displaying on IE
 - Fix read/write database recognition (#1485811)
 - Fix quicksearchbox look in Chrome and Konqueror (#1484841)
 - Fix UTF-8 byte-order mark removing (#1485514)
